--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <option>Basketball</option>
     </select>
    </div>
-   <div class="">
+   <div class="gen">
     <select  multiple multiple-2 >
       <option>Male</option>
       <option>Female</option>
